# vs-libbfcp

./: README.md
libBFCP/: libBFCP.sln
libBFCP/BFCPCltDemo/: BFCPCltDemo.vcxproj  CMakeLists.txt
libBFCP/BFCPCltDemo/tmp/x64/Release/BFCPCltDemo.tlog/: BFCPCltDemo.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libBFCP/BFCPSrvDemo/: BFCPSrvDemo.vcxproj  CMakeLists.txt  main.c
libBFCP/libBFCPClt/: CMakeLists.txt  bfcp_participant.c  bfcp_participant.h  libBFCPClt.vcxproj  libBFCPClt.vcxproj.filters
libBFCP/libBFCPClt/Depends/libBFCPMsg/include/: bfcp_messages.h
libBFCP/libBFCPClt/Depends/libBFCPMsg/lib/Win64/Release/: libBFCPMsg.lib
libBFCP/libBFCPClt/Depends/libBFCPMsg/lib/x86_64/: libbfcpmsg.so.0
libBFCP/libBFCPClt/tmp/x64/Release/libBFCPClt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  libBFCPClt.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libBFCP/libBFCPMsg/: CMakeLists.txt  bfcp_messages.c  libBFCPMsg.vcxproj  libBFCPMsg.vcxproj.filters
libBFCP/libBFCPMsg/tmp/x64/Release/libBFCPMsg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  libBFCPMsg.lastbuildstate  libBFCPMsg.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libBFCP/libBFCPSrv/: CMakeLists.txt  bfcp_link_list.c  bfcp_link_list.h  bfcp_server.c  bfcp_server.h  bfcp_threads.h  libBFCPSrv.vcxproj  libBFCPSrv.vcxproj.filters  stress_server.c
libBFCP/libBFCPSrv/Depends/OpenSSL/lib/arm64/: libcrypto.so.1.0.0
libBFCP/libBFCPSrv/Depends/OpenSSL/lib/x86_64/: libcrypto.so.1.0.0
libBFCP/libBFCPSrv/Depends/libBFCPMsg/lib/mips64/: libbfcpmsg.so.0
